addNewPokemons